--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
           <br>
           <br>
           <button class="btn btn-outline-success my-2 my-sm-0" id="workoutBtn" type="submit">Search</button>
-          <button type="button" class="btn btn-primary m-2">Add to favorites</button>
+          <button type="button" class="btn btn-primary m-2"id="Favorites-btn">Add to favorites</button>
+          <div id="favorites"></div>
         </section>
       </nav>
       <div class="card-footer">
